--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/bishalkg/mvp#readme",
   "dependencies": {
+    "@react-three/fiber": "^7.0.15",
     "express": "^4.17.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "three": "^0.133.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
