--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/bishalkg/mvp#readme",
   "dependencies": {
+    "@react-three/drei": "^7.14.1",
     "@react-three/fiber": "^7.0.15",
     "express": "^4.17.1",
     "react": "^17.0.2",
