--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "learning react-three-fiber",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "node server/server.js",
     "test": "npm test",
     "build-prod": "webpack --mode production",
     "build-dev": "webpack --mode development --watch"
